fix: label / badge vertical align

--- a/theme/css/modules/design/highlight/badge.css
+++ b/theme/css/modules/design/highlight/badge.css
@@ -8,7 +8,7 @@
     border: 1px solid transparent;
     border-radius: 0.5rem;
 
-    vertical-align: middle;
+    vertical-align: top;
     white-space: nowrap;
 }
 
